fix icon spacing on show + gendering

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -31,3 +31,7 @@ body {
 .btn-primary {
   color: white;
 }
+
+.fas {
+  margin-right: 0.5rem;
+}
