--- a/app/assets/stylesheets/cats.scss
+++ b/app/assets/stylesheets/cats.scss
@@ -1,10 +1,18 @@
-.cat-info .fa-paw {
+.cat-info .fas {
   font-size: 1.3rem;
-  i {
-    margin: 0 -3px;
-  }
 }
 
+i.fas.fa-paw {
+  margin-right: 0;
+  margin: 0 -2px;
+}
+
+.cat-info {
+  ul {
+    list-style: none;
+    padding: 0 0;
+  }
+}
 .cat-photos {
   position: relative;
 
